:safety_vest: Sonar fixes for Java 17 source compliance